src/test/ui/hr-subtype/hr-subtype.bound_inv_a_vs_bound_inv_b.stderr
error: compilation successful
  --> $DIR/hr-subtype.rs:100:1
   |
LL | / fn main() {
LL | | //[bound_a_vs_bound_a]~^ ERROR compilation successful
LL | | //[bound_a_vs_bound_b]~^^ ERROR compilation successful
LL | | //[bound_inv_a_vs_bound_inv_b]~^^^ ERROR compilation successful
LL | | //[bound_co_a_vs_bound_co_b]~^^^^ ERROR compilation successful
LL | | //[free_x_vs_free_x]~^^^^^ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

